--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
 <section>
   <div class="container">
     <div class="row justify-content-center">
-     <div class="card-deck">
+     <div class="card-deck ">
       <div class="col-lg-4 col-md-3 col-sm-2">
-       <div class="card">
+       <div class="card card-hover">
          <img src="http://images.innoveduc.fr/integration_gandalf.png" class="card-img-top" alt="gandalf_portrait">
          <p class="bas">Gandalf</p>
          <p class="rewards">reward <span class="orange_reward">1000</span> golden coins</p>                    
@@ -105,7 +105,7 @@
        </div>
      </div>
      <div class="col-lg-4 col-md-3 col-sm-2">
-       <div class="card">
+       <div class="card card-hover">
          <img src="http://images.innoveduc.fr/integration_gandalf.png" class="card-img-top" alt="gandalf_portrait">
          <p class="bas">Gandalf</p>
          <p class="rewards">reward <span class="orange_reward">1000</span> golden coins</p>                    
@@ -114,7 +114,7 @@
        </div>
      </div>
      <div class="col-lg-4 col-md-3 col-sm-2">
-       <div class="card">
+       <div class="card card-hover">
          <img src="http://images.innoveduc.fr/integration_gandalf.png" class="card-img-top" alt="gandalf_portrait">
          <p class="bas">Gandalf</p>
          <p class="rewards">reward <span class="orange_reward">1000</span> golden coins</p>                    
