--- a/index.html
+++ b/index.html
@@ -56,22 +56,22 @@
     <div class="carousel-item active">
       <img class="d-block w-100" src="https://images4.alphacoders.com/843/thumb-1920-84316.jpg" alt="First slide">
     <div class="carousel-caption d-none d-md-block">
-    <h5>jkdvsjlkjfqskljlksdj</h5>
-    <p>jkdvsjlkjfqskljlksdj</p>
+    <h5>jkdvsjlkjfqskljlksdjj</h5>
+    <p>jkdvsjlkjfqskljlksdjj</p>
   </div>
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="https://images5.alphacoders.com/614/thumb-1920-614690.jpg" alt="Second slide">
       <div class="carousel-caption d-none d-md-block">
-    <h5>jkdvsjlkjfqskljlksdj</h5>
-    <p>jkdvsjlkjfqskljlksdj</p>
+    <h5>jkdvsjlkjfqskljlksdjj</h5>
+    <p>jkdvsjlkjfqskljlksdjj</p>
   </div>
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="https://images3.alphacoders.com/855/thumb-1920-85585.jpg" alt="Third slide">
       <div class="carousel-caption d-none d-md-block">
-    <h5>jkdvsjlkjfqskljlksdj</h5>
-    <p>jkdvsjlkjfqskljlksdj</p>
+    <h5>jkdvsjlkjfqskljlksdjj</h5>
+    <p>jkdvsjlkjfqskljlksdjj</p>
   </div>
     </div>
   </div>
