--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
 
   <section>
     <div class="container">
-      <div class="row justify-content-center">
+      <div class="row">
        <div class="card-deck ">
-        <div class="col-lg-4 col-md-3 col-sm-2">
+        <div class="col-lg-4">
          <div class="card card-hover">
            <img src="http://images.innoveduc.fr/integration_gandalf.png" class="card-img-top" alt="gandalf_portrait">
            <p class="bas">Gandalf</p>
@@ -119,7 +119,7 @@
            </div>
          </div>
        </div>
-       <div class="col-lg-4 col-md-3 col-sm-2">
+       <div class="col-lg-4">
          <div class="card card-hover">
            <img src="http://images.innoveduc.fr/integration_gandalf.png" class="card-img-top" alt="gandalf_portrait">
            <p class="bas">Gandalf</p>
@@ -128,7 +128,7 @@
            </div>
          </div>
        </div>
-       <div class="col-lg-4 col-md-3 col-sm-2">
+       <div class="col-lg-4">
          <div class="card card-hover">
            <img src="http://images.innoveduc.fr/integration_gandalf.png" class="card-img-top" alt="gandalf_portrait">
            <p class="bas">Gandalf</p>
