--- a/index.html
+++ b/index.html
@@ -1,97 +1,118 @@
-     <!DOCTYPE html>
-     <html lang="fr">
-     <head>
-      <!-- Required meta tags -->
-      <meta charset="utf-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <title>FindThePrecious</title>
-      <link rel='stylesheet' type='text/css' href='style.css' >
-      <!-- Bootstrap CSS -->
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    </head>
-    <body>
+       <!DOCTYPE html>
+       <html lang="en">
+       <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <title>FindThePrecious</title>
+        <link rel='stylesheet' type='text/css' href='style.css' >
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+      </head>
+      <body>
 
-      <!-- NAVBAR -->
-      <section>
-        <div class="container-fluid color-nav-footer">
-         <nav class="navbar navbar-expand-lg">
-          <a class="navbar-brand" href="#">FindThePrecious.com</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-           <span class="navbar-toggler-icon"></span>       
-         </button>
-         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-             <a class="nav-link" href="#Fellows">Fellows </a>
-           </li>
-           <li class="nav-item">
-             <a class="nav-link" href="#the_ring">The Ring</a>
-           </li>
-           <li class="nav-item">
-             <a class="nav-link" href="#reward">Get my reward</a>
-           </li>
-           <li class="nav-item">
-             <a class="nav-link" href="#best_hunters">Best hunters</a>
-           </li>
-           <li class="nav-item">
-             <a class="nav-link" href="#join_army">Join the army</a>
-           </li>
-           <li class="nav-item">
-             <a class="nav-link" href="#contact_us">Contact us</a>
-           </li>
-         </ul>
-       </div>
-     </nav>
-   </div>
+        <!-- NAVBAR -->
+
+        <section>
+          <div class="container-fluid color-nav-footer">
+           <nav class="navbar navbar-expand-lg">
+            <a class="navbar-brand color-title" href="#"><img src="assets/logo.png" alt="logo_bague"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+             <span class="navbar-toggler-icon"></span>       
+           </button>
+           <div class="collapse navbar-collapse" id="navbarSupportedContent">
+             <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+               <a class="nav-link color-title" href="#Fellows">Fellows</a>
+               <li class="trait"> | </li>
+             </li>
+             <li class="nav-item">
+               <a class="nav-link color-title" href="#the_ring">The Ring</a>
+               <li class="trait"> | </li>
+             </li>
+             <li class="nav-item">
+               <a class="nav-link color-title" href="#reward">Get my reward</a>
+               <li class="trait"> | </li>
+             </li>
+             <li class="nav-item">
+               <a class="nav-link color-title" href="#best_hunters">Best hunters</a>
+               <li class="trait"> | </li>
+             </li>
+             <li class="nav-item">
+               <a class="nav-link color-title" href="#join_army">Join the army</a>
+               <li class="trait"> | </li>
+             </li>
+             <li class="nav-item">
+               <a class="nav-link color-title" href="#contact_us">Contact us</a>
+             </li>
+           </ul>
+         </div>
+       </nav>
+     </div>
+   </section>
+
+   <!-- CAROUSEL -->
+
+   <section>
+    <div class="container-fluid">
+     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100 cover" src="assets/dark_vador.jpg" alt="dark_vador">
+          <div class="carousel-caption d-none d-md-block">
+            <h5 class="text-carousel">Sauron is a very good bro,</h5>
+            <p class="text-carousel">Please help to find his ring !</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100 cover" src="assets/dark_vador.jpg" alt="dark_vador">
+          <div class="carousel-caption d-none d-md-block">
+            <h5 class="text-carousel">Army</h5>
+            <p class="text-carousel">jkdvsjlkjfqskljlksdjj</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100 cover" src="assets/dark_vador.jpg" alt="dark_vador">
+          <div class="carousel-caption d-none d-md-block">
+            <h5 class="text-carousel">We need you !</h5>
+            <p class="text-carousel">jkdvsjlkjfqskljlksdjj</p>
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
   </section>
-  <!-- CAROUSEL -->
+
+  <!-- Fellows -->
+
   <section>
-   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="https://images4.alphacoders.com/843/thumb-1920-84316.jpg" alt="First slide">
-    <div class="carousel-caption d-none d-md-block">
-    <h5>jkdvsjlkjfqskljlksdjj</h5>
-    <p>jkdvsjlkjfqskljlksdjj</p>
-  </div>
+    <div class="container mt-3">
+      <p class="text-fellow"><span class="caractere">z</span> Fellows wantes dead (or alive if you want to eat them later)<span class="caractere">z</span></p>
     </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="https://images5.alphacoders.com/614/thumb-1920-614690.jpg" alt="Second slide">
-      <div class="carousel-caption d-none d-md-block">
-    <h5>jkdvsjlkjfqskljlksdjj</h5>
-    <p>jkdvsjlkjfqskljlksdjj</p>
-  </div>
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="https://images3.alphacoders.com/855/thumb-1920-85585.jpg" alt="Third slide">
-      <div class="carousel-caption d-none d-md-block">
-    <h5>jkdvsjlkjfqskljlksdjj</h5>
-    <p>jkdvsjlkjfqskljlksdjj</p>
-  </div>
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
+  </section>
+
   <!-- Pills -->
+
   <section>
    <div class="container mt-3 px-3">
      <div class="d-flex justify-content-center">
        <div class=center-block>
          <ul class="nav nav-pills mb-3 pills-tab" role="tablist">
            <li class="nav-item">
-             <a class="nav-link active pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Most Wanted</a>
+             <a class="nav-link active pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true"><span class="caractere">z</span>Most Wanted<span>z</span></a>
            </li>
            <li class="nav-item">
              <a class="nav-link pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Most dangerous</a>
@@ -104,7 +125,8 @@
      </div>
    </div>
   </section>
-  <!-- Card decks -->
+
+  <!-- Card decks --> 
 
   <section>
     <div class="container">
@@ -112,28 +134,31 @@
        <div class="card-deck ">
         <div class="col-lg-4">
          <div class="card card-hover">
-           <img src="http://images.innoveduc.fr/integration_gandalf.png" class="card-img-top" alt="gandalf_portrait">
+           <img src="assets/gandalf.png" class="card-img-top" alt="gandalf">
            <p class="bas">Gandalf</p>
-           <p class="rewards">reward <span class="orange_reward">1000</span> golden coins</p>                    
+           <p class="rewards">reward <br> <span class="orange_reward">1000</span> golden coins</p>                    
            <div class="card-body"> 
+            <p>Small description</p>
            </div>
          </div>
        </div>
        <div class="col-lg-4">
          <div class="card card-hover">
-           <img src="http://images.innoveduc.fr/integration_gandalf.png" class="card-img-top" alt="gandalf_portrait">
-           <p class="bas">Gandalf</p>
-           <p class="rewards">reward <span class="orange_reward">1000</span> golden coins</p>                    
+           <img src="assets/aragorn.png" class="card-img-top" alt="aragorn">
+           <p class="bas">aragord</p>
+           <p class="rewards">reward <br> <span class="orange_reward">1000</span> golden coins</p>                    
            <div class="card-body">
+            <p>Small description</p>
            </div>
          </div>
        </div>
        <div class="col-lg-4">
          <div class="card card-hover">
-           <img src="http://images.innoveduc.fr/integration_gandalf.png" class="card-img-top" alt="gandalf_portrait">
-           <p class="bas">Gandalf</p>
-           <p class="rewards">reward <span class="orange_reward">1000</span> golden coins</p>                    
+           <img src="assets/gimli.png" class="card-img-top" alt="gimli">
+           <p class="bas">gimli</p>
+           <p class="rewards">reward <br> <span class="orange_reward">1000</span> golden coins</p>                    
            <div class="card-body">
+            <p>Small description</p>
            </div>
          </div>
        </div>
@@ -141,6 +166,7 @@
    </div>
   </div>
   </section>
+  
   <!-- Text and Button -->
   <section>
     <div class="container mt-3">
