--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <section>
           <div class="container-fluid color-nav-footer">
-           <nav class="navbar navbar-expand-lg">
+           <nav class="navbar navbar-expand-lg navbar-light">
             <a class="navbar-brand color-title" href="#"><img src="assets/logo.png" alt="logo_bague"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
              <span class="navbar-toggler-icon"></span>       
@@ -100,7 +100,7 @@
 
   <section>
     <div class="container mt-3">
-      <p class="text-fellow"><span class="caractere">z</span> Fellows wantes dead (or alive if you want to eat them later)<span class="caractere">z</span></p>
+      <p class="text-fellow"><span class="caractere">w</span> Fellows wantes dead (or alive if you want to eat them later) <span class="caractere">w</span></p>
     </div>
   </section>
 
@@ -112,13 +112,13 @@
        <div class=center-block>
          <ul class="nav nav-pills mb-3 pills-tab" role="tablist">
            <li class="nav-item">
-             <a class="nav-link active pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true"><span class="caractere">z</span>Most Wanted<span>z</span></a>
+             <a class="nav-link active pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true"><span class="caractere">z</span>Most Wanted<span class="caractere">z</span></a>
            </li>
            <li class="nav-item">
-             <a class="nav-link pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Most dangerous</a>
+             <a class="nav-link pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false"><span class="caractere">z</span>Most dangerous<span class="caractere">z</span></a>
            </li>
            <li class="nav-item">
-             <a class="nav-link pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">Already captured</a>
+             <a class="nav-link pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false"><span class="caractere">z</span>Already captured<span class="caractere">z</span></a>
            </li>
          </ul>
        </div>
@@ -153,11 +153,11 @@
          </div>
        </div>
        <div class="col-lg-4">
-         <div class="card card-hover">
-           <img src="assets/gimli.png" class="card-img-top" alt="gimli">
-           <p class="bas">gimli</p>
-           <p class="rewards">reward <br> <span class="orange_reward">1000</span> golden coins</p>                    
-           <div class="card-body">
+         <div class="card card-hover1">
+           <img src="assets/gimli.png" class="card-img-top1" alt="gimli">
+           <p class="bas1">gimli</p>
+           <p class="rewards1">dead</p>                    
+           <div class="card-body1">
             <p>Small description</p>
            </div>
          </div>
